--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -25,7 +25,7 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=25
 markup=none
 color=#F3F4F5
 background=#322b2b
@@ -33,30 +33,26 @@ border_top=0
 border_left=0
 border_right=0
 border_bottom=2
-
+separator=false
 
 # [test]
-# full_text=<span color='blue' font_desc='FontAwesome'>&#xf02b;</span>
+# full_text=<span color='red' font_desc='FontAwesome'>&#xf02b;</span><span>  label</span>
 # markup=pango
+# border=#ff0000
 
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
+
 [volume]
-label=
-instance=Master
+label= 
 interval=once
 command=/home/hunar/i3blocks/volume.py
 signal=10
-
-[example]
-label=some
-full_text=example
-color=#FFFFFF
-# background=#222222
-border=#9FBC00
+color=#b1951d
+border=#b1951d
 
 # Memory usage
 #
@@ -123,12 +119,21 @@ label=
 #instance=1
 interval=30
 
-# Date Time
-#
-[time]
-label=
-command=date '+%Y-%m-%d %H:%M:%S'
+# Date
+[date]
+label= 
+command=date '+%a, %d %b'
 interval=5
+color=#67b11d
+border=#67b11d
+
+# Time
+[time]
+label= 
+command=date '+%H:%M '
+interval=5
+color=#28def0
+border=#28def0
 
 # Generic media player support
 #
