add plugin to get available disk

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -46,6 +46,19 @@ separator=false
 # The second parameter overrides the mixer selection
 # See the script for details.
 
+
+# Disk usage
+#
+# The directory defaults to $HOME if the instance is not specified.
+# The script may be called with a optional argument to set the alert
+# (defaults to 10 for 10%).
+[disk]
+label= 
+command=/home/hunar/i3blocks/disk.py
+interval=30
+color=#2d9574
+border=#2d9574
+
 [volume]
 label= 
 interval=once
@@ -66,16 +79,6 @@ interval=30
 label=SWAP
 instance=swap
 separator=false
-interval=30
-
-# Disk usage
-#
-# The directory defaults to $HOME if the instance is not specified.
-# The script may be called with a optional argument to set the alert
-# (defaults to 10 for 10%).
-[disk]
-label=HOME
-#instance=/mnt/data
 interval=30
 
 # Network interface monitoring
