add plugin to compute cpu usage

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -36,7 +36,7 @@ border_bottom=2
 separator=false
 
 # [test]
-# full_text=<span color='red' font_desc='FontAwesome'>&#xf02b;</span><span>  label</span>
+# full_text=<span color='red' font_desc='FontAwesome'>&#xf131;</span><span>  label</span>
 # markup=pango
 # border=#ff0000
 
@@ -46,6 +46,13 @@ separator=false
 # The second parameter overrides the mixer selection
 # See the script for details.
 
+[cpu]
+label=
+command=/home/hunar/i3blocks/cpu.py
+separator=false
+interval=30
+color=#7e68a5
+border=#7e68a5
 
 # Disk usage
 #
@@ -67,14 +74,10 @@ signal=10
 color=#b1951d
 border=#b1951d
 
+
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-[memory]
-label=MEM
-separator=false
-interval=30
-
 [memory]
 label=SWAP
 instance=swap
