replace script to compute cpu_usage

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -48,8 +48,7 @@ separator=false
 
 [cpu]
 label=
-command=/home/hunar/i3blocks/cpu.py
-separator=false
+command=/home/hunar/i3blocks/cpu_usage
 interval=30
 color=#7e68a5
 border=#7e68a5
