add plugin to display battery state

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -49,7 +49,7 @@ separator=false
 [cpu]
 label=
 command=/home/hunar/i3blocks/cpu_usage
-interval=30
+interval=10
 color=#7e68a5
 border=#7e68a5
 
@@ -102,27 +102,15 @@ separator=false
 #instance=eth0
 interval=5
 
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-[cpu_usage]
-label=CPU
-interval=10
-min_width=CPU: 100.00%
-#separator=false
-
-#[load_average]
-#interval=10
-
 # Battery indicator
 #
 # The battery instance defaults to 0.
 [battery]
-label=
+command=/home/hunar/i3blocks/battery.pl
 #label=⚡
 #instance=1
 interval=30
+border=#F3F4F5
 
 # Date
 [date]
