--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -50,8 +50,8 @@ separator=false
 label=
 command=/home/hunar/i3blocks/cpu_usage
 interval=10
-color=#7e68a5
-border=#7e68a5
+color=#e25884
+border=#e25884
 
 # Disk usage
 #
