add script to query wifi status

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -94,13 +94,11 @@ interval=10
 separator=false
 
 [wifi]
-#instance=wlp3s0
+instance=wlp4s0
+command=/home/hunar/i3blocks/wifi.py
 interval=10
-separator=false
-
-[bandwidth]
-#instance=eth0
-interval=5
+color=#bc6ec5
+border=#bc6ec5
 
 # Battery indicator
 #
